--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Redirect immediately when the page loads
        window.onload = function() {
-           window.location.href = "https://fff.zaplinx.online/m/583939594558438.html?utm_medium=paid&utm_source=ig&utm_id=120215649048050083&utm_content=120215649048260083&utm_term=120215649049200083&utm_campaign=120215649048050083&fbclid=PAY2xjawIRFOpleHRuA2FlbQEwAGFkaWQBqxd-9E-rAwGm6mwV746k3mUVuNQYssVct6X5qMhOFhzuBgvSmSCjQnmu9mYDJRIQ7UiZ_aem_tyy2wGVMF6WI2E9saaU8zg"; // Change this to the link you want
+           window.location.href = "ttps://wslnk.com/link/yd1?utm_medium=paid&utm_source=ig&utm_id=120215904302940372&utm_content=120215904302740372&utm_term=120215904302780372&utm_"; // Change this to the link you want
           
           // window.location.href = "https://t.me/visalearning";
        
