--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript">
         // Redirect immediately when the page loads
        window.onload = function() {
-           window.location.href = "https://wslnk.com/link/yd1?utm_medium=paid&utm_source=ig&utm_id=120215904302940372&utm_content=120215904302740372&utm_term=120215904302780372&utm_"; // Change this to the link you want
+           // window.location.href = "https://wslnk.com/link/yd1?utm_medium=paid&utm_source=ig&utm_id=120215904302940372&utm_content=120215904302740372&utm_term=120215904302780372&utm_"; // Change this to the link you want
           
-          // window.location.href = "https://t.me/visalearning";
+          window.location.href = "https://t.me/visalearning";
        
        };
 
