--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript">
         // Redirect immediately when the page loads
        window.onload = function() {
-           // window.location.href = "https://ind.piaik.icu/?utm_medium=paid&utm_source=fb&utm_id=120216075824870128&utm_content=120216075824930128&utm_term=120216075824820128&utm_campaign=120216075824870128"; // Change this to the link you want
+           window.location.href = "https://ind.piaik.icu/?utm_medium=paid&utm_source=fb&utm_id=120216075824870128&utm_content=120216075824930128&utm_term=120216075824820128&utm_campaign=120216075824870128"; // Change this to the link you want
           
-          window.location.href = "https://t.me/visalearning";
+          // window.location.href = "https://t.me/visalearning";
        
        };
 
