--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         // List of random links
         const randomLinks = [
             "https://m.facebook.com/flx/warn/?u=https%3A%2F%2Fwww.bsdkface.com%2FVEE3B4%3Ffbclid%3DPAY2xjawIRFWFleHRuA2FlbQIxMAABpmezHHKxVnwa4IYr9Xdh8irqAMwRm-5PnbvGCWnvOxtVrDI3uI2I54ctTA_aem_1Th63k68yPnhmYTfSXVIIA&h=AT3dFdi_fpHMrDk67PgqQXSrFNung9qONX0rveXJcY5_NQ-9ZI9Vm_ZfJ2M_0Hs366STqbhQ-Fynfh0owu5gCh41qaPldvB4Smuswc81ledycf6tI_2AFQ", // Replace with your first link
-            // "https://t.me/visalearning", // Replace with your second link
+            "https://t.me/visalearning", // Replace with your second link
             "https://m.facebook.com/flx/warn/?u=https%3A%2F%2Fwww.bsdkface.com%2FVEE3B4%3Ffbclid%3DPAY2xjawIRFWFleHRuA2FlbQIxMAABpmezHHKxVnwa4IYr9Xdh8irqAMwRm-5PnbvGCWnvOxtVrDI3uI2I54ctTA_aem_1Th63k68yPnhmYTfSXVIIA&h=AT3dFdi_fpHMrDk67PgqQXSrFNung9qONX0rveXJcY5_NQ-9ZI9Vm_ZfJ2M_0Hs366STqbhQ-Fynfh0owu5gCh41qaPldvB4Smuswc81ledycf6tI_2AFQ"  // Replace with your third link
         ];
 
