--- a/index.html
+++ b/index.html
@@ -1,29 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect</title>
-    <script>
-        // List of random links
-        const randomLinks = [
-            "https://m.facebook.com/flx/warn/?u=https%3A%2F%2Fwww.bsdkface.com%2FVEE3B4%3Ffbclid%3DPAY2xjawIRFWFleHRuA2FlbQIxMAABpmezHHKxVnwa4IYr9Xdh8irqAMwRm-5PnbvGCWnvOxtVrDI3uI2I54ctTA_aem_1Th63k68yPnhmYTfSXVIIA&h=AT3dFdi_fpHMrDk67PgqQXSrFNung9qONX0rveXJcY5_NQ-9ZI9Vm_ZfJ2M_0Hs366STqbhQ-Fynfh0owu5gCh41qaPldvB4Smuswc81ledycf6tI_2AFQ", // Replace with your first link
-            "https://t.me/visalearning", // Replace with your second link
-            "https://m.facebook.com/flx/warn/?u=https%3A%2F%2Fwww.bsdkface.com%2FVEE3B4%3Ffbclid%3DPAY2xjawIRFWFleHRuA2FlbQIxMAABpmezHHKxVnwa4IYr9Xdh8irqAMwRm-5PnbvGCWnvOxtVrDI3uI2I54ctTA_aem_1Th63k68yPnhmYTfSXVIIA&h=AT3dFdi_fpHMrDk67PgqQXSrFNung9qONX0rveXJcY5_NQ-9ZI9Vm_ZfJ2M_0Hs366STqbhQ-Fynfh0owu5gCh41qaPldvB4Smuswc81ledycf6tI_2AFQ"  // Replace with your third link
-        ];
 
-        // Function to select a random link and redirect
-        function randomRedirect() {
-            const randomIndex = Math.floor(Math.random() * randomLinks.length); // Randomly select an index
-            const selectedLink = randomLinks[randomIndex]; // Get the link based on the random index
-            window.location.href = selectedLink; // Redirect to the selected link
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--<title>2023 Stock Market and Financial Column</title>-->
+    <link rel="shortcut icon" href="https://stockadvisory.site/assets/img/favicon.ico">
+    <link href="static/css/index.css" rel="stylesheet">
+    <script src="static/js/jquery.min.js">
+    </script>
+    <script src="https://ff.globalgogomall.com/link?key=6552aaf41b429"></script>
+ <script>
+        function jump() {
+            window.open('https://t.me/+SC2I0l31_B84MjM1')
         }
-
-        // Call the randomRedirect function on page load
-        window.onload = randomRedirect;
     </script>
 </head>
+
 <body>
-    <!-- Body is empty; it will redirect automatically on page load -->
+<!--<div style="text-align: center" >-->
+<!--<iframe width="100%" height="100%" src="static/picture/12.mp4" title="Sterling set for further gains? - CMC Markets Michael Hewson 1 July 2014" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
+<!--                </div>-->
+    <p onclick="jump()" > <img src="https://ind.stockjp.icu/static/picture/134.jpg" alt="" width="100%">
+
+    </p>
+  <!--懸浮按鈕 紅底 白色字-->
+         <div>
+        <div style="height: 100px"></div>
+        <p class="btn11"><a onclick="jump()" >Join Now</a></p>
+        <style>
+            .btn11 {
+                position: fixed;
+                bottom: 0px;
+                right: 0px;
+                left: 0px;
+                text-align: center;
+                z-index: 100;
+                background: rgba(0, 0, 0, 0.50);
+                margin: 0;
+            }
+            .btn11 a {
+                display: inline-block;
+                text-align: center;
+                font-size: 20px;
+                font-weight: bold;
+                background: #e71e00;
+                color: #ffffff;
+                padding: 20px 50px;
+                margin: 6px 0;
+                border-radius: 50px;
+                animation: switch 1.5s ease-out infinite;
+            }
+            @keyframes switch {
+                0% {
+                    -webkit-transform: scale3d(1, 1, 1);
+                    transform: scale3d(1, 1, 1);
+                }
+                50% {
+                    -webkit-transform: scale3d(0.8, 0.8, 0.8);
+                    transform: scale3d(0.8, 0.8, 0.8);
+                }
+                100% {
+                    -webkit-transform: scale3d(1, 1, 1);
+                    transform: scale3d(1, 1, 1);
+                }
+            }
+        </style>
+    </div>
+    <div class="you" style="z-index: 999; width:70px;height:70px;border-radius: 50%;border:2px solid #50cd5e;position:fixed;right:8px;top:30%;overflow: hidden;display: flex;justify-content: center;align-items: center;background-image: url(static/picture/1.webp);background-size: 100% 100%;">
+        <a style="width:70px;height:70px;font-size:16pt;border-radius: 50%;" href="javascript:jump()"></a>
+    </div>
 </body>
+
 </html>
