--- a/index.html
+++ b/index.html
@@ -1,78 +1,164 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Make Money Online</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            background-color: #0044CC; /* Blue Background */
+            color: white;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            max-width: 90%;
+            text-align: center;
+        }
+        h1 {
+            font-size: 28px;
+            font-weight: bold;
+            text-transform: uppercase;
+            animation: popUp 1s infinite alternate;
+        }
+        p {
+            font-size: 18px;
+            margin: 15px 0;
+            line-height: 1.4;
+        }
+        .features {
+            text-align: left;
+            display: inline-block;
+            margin-top: 15px;
+        }
+        .features p {
+            display: flex;
+            align-items: center;
+            font-size: 16px;
+            font-weight: bold;
+        }
+        .features img {
+            width: 20px;
+            margin-right: 8px;
+        }
+        /* WhatsApp Button */
+        .whatsapp-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            color: black;
+            padding: 10px 15px;
+            font-size: 18px;
+            border-radius: 50px;
+            font-weight: bold;
+            cursor: pointer;
+            border: none;
+            box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 250px;
+            margin-top: 20px;
+            animation: popUp 1s infinite alternate;
+        }
+        .whatsapp-btn img {
+            width: 30px;
+            margin-right: 8px;
+        }
+        .whatsapp-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+        }
+        /* Countdown Timer */
+        .countdown {
+            font-size: 36px;
+            font-weight: bold;
+            margin: 15px;
+            display: none;
+            animation: countdownPop 1s infinite alternate;
+        }
+        @keyframes countdownPop {
+            0% { transform: scale(1); opacity: 1; }
+            100% { transform: scale(1.2); opacity: 0.8; }
+        }
+        /* Contact Us Button */
+        .contact-btn {
+            display: none;
+            background-color: #FFD700;
+            color: black;
+            padding: 10px 15px;
+            text-decoration: none;
+            font-size: 20px;
+            font-weight: bold;
+            border-radius: 50px;
+            width: 250px;
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+            margin-top: 15px;
+            animation: popUp 1s infinite alternate;
+        }
+        .contact-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+        }
+        /* Button Animation */
+        @keyframes popUp {
+            0% { transform: scale(1); }
+            100% { transform: scale(1.1); }
+        }
+    </style>
+</head>
+<body>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <div class="container">
+        <h1>The best way to get rich, one step closer to success</h1>
+        <p>In 2025, more than 1,000,000 friends have joined us, and they can already use the new way of making money at home, which has successfully improved family life. What are you waiting for?</p>
+        
+        <div class="features">
 
-    <!--<title>2023 Stock Market and Financial Column</title>-->
-    <link rel="shortcut icon" href="https://stockadvisory.site/assets/img/favicon.ico">
-    <link href="static/css/index.css" rel="stylesheet">
-    <script src="static/js/jquery.min.js">
-    </script>
-    <script src="https://ff.globalgogomall.com/link?key=6552aaf41b429"></script>
- <script>
-        function jump() {
-            window.open('https://t.me/+SC2I0l31_B84MjM1')
+<p><img src="https://cdn-icons-png.flaticon.com/512/845/845646.png" alt="✔"> 100% Money-making</p>
+            <p><img src="https://cdn-icons-png.flaticon.com/512/845/845646.png" alt="✔"> Funds Withdrawable Anytime</p>
+            <p><img src="https://cdn-icons-png.flaticon.com/512/845/845646.png" alt="✔"> Professional investment advisor</p>
+            <p><img src="https://cdn-icons-png.flaticon.com/512/845/845646.png" alt="✔"> Consult now and start making money</p>
+        </div>
+
+        <!-- WhatsApp Button -->
+        <button class="whatsapp-btn" onclick="startCountdown()">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"> Add WHATSAPP
+        </button>
+
+        <!-- Countdown Timer -->
+        <div class="countdown" id="countdown">3</div>
+
+        <!-- Contact Us Button -->
+        <a href="https://t.me/+SC2I0l31_B84MjM1" class="contact-btn" id="contact-btn">Contact Us</a>
+    </div>
+
+    <script>
+        function startCountdown() {
+            document.querySelector(".whatsapp-btn").style.display = "none";
+            let countdownElement = document.getElementById("countdown");
+            countdownElement.style.display = "block";
+
+            let count = 3;
+            let interval = setInterval(() => {
+                count--;
+                countdownElement.innerText = count;
+                if (count === 0) {
+                    clearInterval(interval);
+                    countdownElement.style.display = "none";
+                    document.getElementById("contact-btn").style.display = "block";
+                }
+            }, 1000);
         }
     </script>
-</head>
 
-<body>
-<!--<div style="text-align: center" >-->
-<!--<iframe width="100%" height="100%" src="static/picture/12.mp4" title="Sterling set for further gains? - CMC Markets Michael Hewson 1 July 2014" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
-<!--                </div>-->
-    <p onclick="jump()" > <img src="https://ind.stockjp.icu/static/picture/134.jpg" alt="" width="100%">
-
-    </p>
-  <!--懸浮按鈕 紅底 白色字-->
-         <div>
-        <div style="height: 100px"></div>
-        <p class="btn11"><a onclick="jump()" >Join Now</a></p>
-        <style>
-            .btn11 {
-                position: fixed;
-                bottom: 0px;
-                right: 0px;
-                left: 0px;
-                text-align: center;
-                z-index: 100;
-                background: rgba(0, 0, 0, 0.50);
-                margin: 0;
-            }
-            .btn11 a {
-                display: inline-block;
-                text-align: center;
-                font-size: 20px;
-                font-weight: bold;
-                background: #e71e00;
-                color: #ffffff;
-                padding: 20px 50px;
-                margin: 6px 0;
-                border-radius: 50px;
-                animation: switch 1.5s ease-out infinite;
-            }
-            @keyframes switch {
-                0% {
-                    -webkit-transform: scale3d(1, 1, 1);
-                    transform: scale3d(1, 1, 1);
-                }
-                50% {
-                    -webkit-transform: scale3d(0.8, 0.8, 0.8);
-                    transform: scale3d(0.8, 0.8, 0.8);
-                }
-                100% {
-                    -webkit-transform: scale3d(1, 1, 1);
-                    transform: scale3d(1, 1, 1);
-                }
-            }
-        </style>
-    </div>
-    <div class="you" style="z-index: 999; width:70px;height:70px;border-radius: 50%;border:2px solid #50cd5e;position:fixed;right:8px;top:30%;overflow: hidden;display: flex;justify-content: center;align-items: center;background-image: url(static/picture/1.webp);background-size: 100% 100%;">
-        <a style="width:70px;height:70px;font-size:16pt;border-radius: 50%;" href="javascript:jump()"></a>
-    </div>
 </body>
-
 </html>
