--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Redirect immediately when the page loads
        window.onload = function() {
-           window.location.href = "http://usssa.icu/88888?utm_medium=paid&utm_source=fb&utm_id=120218919978640709&utm_content=120218919978570709&utm_term=120218919978630709&utm_campaign=120218919978640709"; // Change this to the link you want
+           window.location.href = "https://www.facebook.com/61550722077973/posts/122239329770024069/?rdid=3XQrU1AzXL7UMP7S#"; // Change this to the link you want
          
           // window.location.href = "https://t.me/visalearning";
        
