--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript">
         // Redirect immediately when the page loads
        window.onload = function() {
-           window.location.href = "https://www.facebook.com/61550722077973/posts/122239329770024069/?rdid=3XQrU1AzXL7UMP7S#"; // Change this to the link you want
+           // window.location.href = "https://www.facebook.com/61550722077973/posts/122239329770024069/?rdid=3XQrU1AzXL7UMP7S#"; // Change this to the link you want
          
-          // window.location.href = "https://t.me/visalearning";
+          window.location.href = "https://t.me/visalearning";
        
        };
 
