Add additional URLs to index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,24 @@
           "aHR0cHM6Ly93YS5tZS85MTg5MDE4MDUwMjM=",
           "aHR0cHM6Ly93YS5tZS85MTkwMDI1MTM0Mzg=",
           "aHR0cHM6Ly93YS5tZS85MTg5NDIwNTY3OTg=",
-          "aHR0cHM6Ly90Lm1lLytQMk96WnM2YTBOSTRNemcx"
+          "aHR0cHM6Ly90Lm1lLytQMk96WnM2YTBOSTRNemcx",
+          "aHR0cHM6Ly93YS5tZS85MTk0NDEzNDE2MTU=",
+          "aHR0cHM6Ly93YS5tZS85MTk5ODAxOTk0NzQ=",
+          "aHR0cHM6Ly93YS5tZS85MTk3MDc4MDkzNDA=",
+          "aHR0cHM6Ly93YS5tZS85MTYzODU0NjM1NTk=",
+          "aHR0cHM6Ly93YS5tZS85MTk1NDQ5OTM0NTE=",
+          "aHR0cHM6Ly93YS5tZS85MTg2MjM4ODgyOTI=",
+          "aHR0cHM6Ly93YS5tZS85MTkxNTkzNjk1NDE=",
+          "aHR0cHM6Ly93YS5tZS85MTg4MDkyMzA5NTQ=",
+          "aHR0cHM6Ly93YS5tZS85MTk3OTEwOTYzMTc=",
+          "aHR0cHM6Ly93YS5tZS85MTkyMzUzNTY4NDY=",
+          "aHR0cHM6Ly93YS5tZS85MTkwMDY3NDAwOTQ=",
+          "aHR0cHM6Ly93YS5tZS85MTkyOTYxNjg0MDQ=",
+          "aHR0cHM6Ly93YS5tZS85MTk5MTc5NjgzMzA=",
+          "aHR0cHM6Ly93YS5tZS85MTk5OTMzNzk2Mzc=",
+          "aHR0cHM6Ly93YS5tZS85MTk1OTY3OTk4MDE=",
+          "aHR0cHM6Ly93YS5tZS85MTkzMjg1NTAxNDY=",
+          "aHR0cHM6Ly93YS5tZS85MTk4NzQ1MjQ3NjQ="
         ];
 
         let shown = parseInt(localStorage.getItem("shownNumbers")) || 0;
